# topotide

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: FindIpelib.cmake
data/test/: esri-grid-correct-with-comma.ascii  esri-grid-insufficient-elevation-values.ascii  esri-grid-missing-cellsize.ascii  esri-grid-missing-ncols.ascii  esri-grid-missing-nodata.ascii  esri-grid-missing-nrows.ascii  esri-grid-no-elevation-values.ascii  esri-grid-non-integral-ncols.ascii  esri-grid-premature-eof.ascii
doc-images/: dcel-carve-edges.ipe  dcel-halfedge-split.ipe  dcel-vertex-split-edge-edge.ipe  dcel-vertex-split-wedge-edge.ipe  dcel-vertex-split-wedge-wedge.ipe  network-graph-interesting.ipe
gui/: CMakeLists.txt  backgrounddock.cpp  backgrounddock.h  backgroundthread.cpp  backgroundthread.h  colorramp.cpp  colorramp.h  coordinatelabel.cpp  coordinatelabel.h  graphwriter.cpp  graphwriter.h  linksequencewriter.cpp  linksequencewriter.h  mergetreedock.cpp  mergetreedock.h  progressdock.cpp  progressdock.h  resources.qrc  riverapp.cpp  rivercli.cpp  rivercli.h  riverdata.cpp  riverdata.h  rivergui.cpp  rivergui.h  riverwidget.cpp  riverwidget.h  settingsdock.cpp  settingsdock.h  timedock.cpp  timedock.h  uihelper.cpp  uihelper.h  unitsdock.cpp  unitsdock.h  unitshelper.cpp  unitshelper.h
gui/res/shader/: river-blue-yellow.frag  river-grayscale.frag  river-purples.frag  river.frag  river.vert
lib/: CMakeLists.txt  boundary.cpp  boundary.h  boundarycreator.cpp  boundarycreator.h  boundaryreader.cpp  boundaryreader.h  boundarystatus.h  boundarywriter.cpp  boundarywriter.h  dcel.h  fingerfinder.cpp  fingerfinder.h  gradientfieldsimplifier.cpp  gradientfieldsimplifier.h  heightmap.cpp  heightmap.h  inputdcel.cpp  inputdcel.h  inputgraph.cpp  inputgraph.h  linksequence.cpp  main.dox  mergetree.cpp  mergetree.h  mscomplex.cpp  mscomplex.h  mscomplexcreator.cpp  mscomplexcreator.h  mscomplexsimplifier.cpp  mscomplexsimplifier.h  mstonetworkgraphcreator.cpp  mstonetworkgraphcreator.h  networkgraph.cpp  networkgraph.h  path.cpp  path.h  piecewisecubicfunction.cpp  piecewisecubicfunction.h  piecewiselinearfunction.cpp  (+8 more)
lib/io/: esrigridreader.cpp  esrigridreader.h  esrigridwriter.cpp  esrigridwriter.h  gdalreader.cpp  gdalreader.h  textfilereader.cpp  textfilereader.h
manual/: ttga-manual.tex
src/: CMakeLists.txt  boundary.cpp  boundary.h  boundaryreader.cpp  boundaryreader.h  boundarywriter.cpp  boundarywriter.h  carvedcomplex.cpp  carvedcomplex.h  dcel.h  heightmap.cpp  heightmap.h  inputdcel.cpp  inputdcel.h  inputgraph.cpp  inputgraph.h  linksequence.cpp  linksequence.h  lowestpathtree.cpp  lowestpathtree.h  main.dox  mscomplex.cpp  mscomplex.h  mscomplexcreator.cpp  mscomplexcreator.h  mscomplexsimplifier.cpp  mscomplexsimplifier.h  mstonetworkgraphcreator.cpp  mstonetworkgraphcreator.h  network.cpp  network.h  networkcreator.cpp  networkcreator.h  networkgraphcreator.cpp  networkgraphcreator.h  path.cpp  path.h  piecewisecubicfunction.cpp  piecewisecubicfunction.h  point.cpp  (+13 more)
src/gui/: CMakeLists.txt  backgrounddock.cpp  backgrounddock.h  backgroundthread.cpp  backgroundthread.h  coordinatelabel.cpp  coordinatelabel.h  graphwriter.cpp  graphwriter.h  ipedialog.ui  ipewriter.cpp  ipewriter.h  linksequencewriter.h  networkdock.cpp  networkdock.h  progressdock.cpp  progressdock.h  resources.qrc  riverapp.cpp  rivercli.cpp  riverdata.cpp  riverdata.h  rivergui.cpp  rivergui.h  riverwidget.cpp  riverwidget.h  settingsdock.cpp  settingsdock.h  striationdock.cpp  striationdock.h  unitsdock.cpp  unitsdock.h  unitshelper.cpp
src/gui/res/ipe/: style.xml
src/gui/res/shader/: river-blue-yellow.frag  river-grayscale.frag  river-purples.frag  river.frag
src/test/: CMakeLists.txt  test_boundary_path.cpp  test_dcel.cpp  test_inputdcel.cpp  test_inputgraph.cpp  test_mscomplex.cpp  test_piecewisecubicfunction.cpp  test_sandcache.cpp  test_striation.cpp  test_units.cpp
test/: CMakeLists.txt  test_boundary_path.cpp  test_dcel.cpp  test_inputdcel.cpp  test_inputgraph.cpp  test_mscomplex.cpp  test_piecewisecubicfunction.cpp  test_piecewiselinearfunction.cpp  test_units.cpp
test/io/: test_esrigridreader.cpp  test_gdalreader.cpp
